# 3.2
- Improves updating queue and playing status after playlist change
- Improves handling of files without cover
- Minor bugfixes

# 3.1
- Fixes duplicate entries in queue not showing 
- Fixes reconnect after wakeup

# 3.0
- Checks if mpc is found before trying to execute commands with it.
- Shows instruction message if mpc isn't found.
- Improves check and reconnect if mpd-server is not found
- Improves check and reconnect if network isn't available
- Sticking with major version numbers, since this seems more robust on pling(?)

# 2.0
- Shows generic album-icon if no cover is available
- Selects currently playing item when Queue window is shown
- Uses breeze's generic media-controller icon as widget-symbol-icon
- Adds setting for transparent background in widget configuration
- Improves drop-shadow drawing
- Changes font-size control from pixel to point measure. Adjust the value down if you previously changed it. New default value is 10 (was 13).
- Informs about empty play queue
- Improves cover fetching time
- Lot-o-Codecleanup & minor layout tweaks
- Bumps version to 2.0. Hopefully that will unclog the store.kde.org update issues. Also I would consider this a solid "1.0" if we had started out with 0.x instead of 1.x before.

# 1.10
- Performance improvements, bugfixes and code cleanup. 

# 1.9
- Updates button icons to use plasma-icons

# 1.8
- Improves cover loading reliability
- Adds new visual options in configuration

# 1.7
- Adds covers to songs in queue
- Removes setting for disabling cover cache (required now)
- Adds setting for how long to cache covers
- Improves song representation if album or artist is missing in Queue view

# 1.6
- Adds queue management (click on song info)

# 1.5
- Makes cover directory configurable
- Option to enable/disable cover caching
- Improves cover loading if multiple widget instances are running
- Layout tweaks

# 1.4
- Improve reconnect to mpd server on device wake